# fyp-flutter

./: .gitignore  analysis_output.txt  final_analysis.txt  prep.dart  pubspec.yaml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  dsp_processors.h  dtln_fft.h  dtln_processor.cpp  dtln_processor.h  native_audio.cpp  tflite_c_api.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/constants/: api_endpoints.dart  api_keys.dart  app_colors.dart
lib/data/services/: HearingProfileService.dart  audio_enhancement_service.dart  audio_model_service.dart  bluetooth_service.dart  conversation_history_service.dart  model_manager_service.dart  native_audio_api.dart  noise_suppression_service.dart  transcription_service.dart  voice_isolation_service.dart
lib/data/utils/: devanagari_to_roman.dart
lib/presentation/screens/: connect_device_screen.dart  conversation_history_screen.dart  hearing_result_screen.dart  hearing_test_screen.dart  home_screen.dart  live_assist_screen.dart  login_screen.dart  main_screen.dart  menu_screen.dart  model_settings_screen.dart  onboarding.dart  profile_account_screen.dart  signup_screen.dart  splash_screen.dart  transcription_screen.dart
lib/routes/: app_routes.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
tool/: download_models.dart
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
